# filecheck

./: filecheck.cabal
app/: Main.hs
