cabal-version:      2.4
name:               filecheck
version:            0.1.0.0
author:             amhsm6
maintainer:         amhsm6@gmail.com

executable filecheck
    main-is:          Main.hs

    build-depends:    base ^>=4.16.4.0
                    , mtl
                    , bytestring
                    , containers
                    , filepath
                    , directory

    hs-source-dirs:   app

    default-language: Haskell2010
